--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <h3>7. Accedere con il nuovo utente</h3>
     <p>
       Seleziona <strong>Altro utente</strong>, inserisci le credenziali e usa
-      <code>.\NomeUtente</code> per forzare l'accesso locale.
+      <code>.\</code> prima del nome utente per forzare l'accesso locale: <code>.\NomeUtente</code>
     </p>
 
     <h3>8. Verifica dei privilegi</h3>
