--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
 		</p>
 		<hr />
 
-		<h2>🗑️ Parte 3 – Disinstallare Prodotti ESET Manualmente ([KB2289])</h2>
+		<h2>🗑️ Parte 3 – Disinstallare Prodotti ESET Manualmente [KB2289]</h2>
 		<p>
 			Questa sezione descrive come utilizzare lo strumento ESET Uninstaller per
 			rimuovere un prodotto ESET quando i metodi di disinstallazione standard
