--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="icon" href="favicon.ico" type="image/x-icon" />
-		<title>Guida Admin Windows e Gestione Software</title>
+		<title>Guida Admin Windows</title>
 		<style>
 			:root {
 				--body-bg-light: #f9f9f9;
@@ -254,7 +254,7 @@
 	</head>
 	<body>
 		<header class="site-header">
-			<h1>Guida Windows</h1>
+			<h1>Guida Admin Windows</h1>
 			<button
 				id="themeToggle"
 				class="theme-toggle-button"
