--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
 		</p>
 
 		<h3>2. Riavviare il PC in Modalità Provvisoria</h3>
-		<p><strong>Metodo principale</strong> (Opzioni di avvio avanzate):</p>
+		<p><strong>A. Metodo principale</strong> (Opzioni di avvio avanzate):</p>
 		<ul>
 			<li>
 				Tenere premuto il tasto <strong>Maiusc/Shift</strong> e cliccare su
@@ -424,7 +424,7 @@
 				</ul>
 			</li>
 		</ul>
-		<p><strong>Metodo alternativo</strong> (tramite <code>msconfig</code>):</p>
+		<p><strong>B. Metodo alternativo</strong> (tramite <code>msconfig</code>):</p>
 		<ul>
 			<li>
 				Premere <code>Win + R</code>, digitare <code>msconfig</code> e premere
@@ -487,7 +487,7 @@
 		<ul>
 			<li>
 				Prima di riavviare, se hai usato <code>msconfig</code> per entrare in
-				Modalità Provvisoria, rieseguilo e deseleziona "Modalità provvisoria"
+				Modalità Provvisoria (Metodo B), rieseguilo e deseleziona "Modalità provvisoria"
 				nella scheda "Opzioni di avvio".
 			</li>
 			<li>Riavvia il computer.</li>
