--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
 			<li>Cliccare <strong>OK</strong>, quindi <strong>Riavvia</strong>.</li>
 			<li>
 				<strong>Nota:</strong> Se si utilizza <code>msconfig</code>, è
-				imperativo rieseguire <code>msconfig</code> in Modalità Provvisoria e
+				obbligatorio rieseguire <code>msconfig</code> e
 				deselezionare "Modalità provvisoria" prima del riavvio finale, per
 				evitare avvii successivi in questa modalità.
 			</li>
