--- a/index.html
+++ b/index.html
@@ -510,7 +510,8 @@
 		<h3>1. Riavviare in Modalità di Ripristino</h3>
 		<p>Segui lo stesso procedimento di prima.</p>
 
-		<h3>2. Aprire il Prompt dei Comandi e digitare i seguenti comandi, uno alla volta:</h3>
+		<h3>2. Aprire il Prompt dei Comandi</h3>
+		<p>Inserisci i seguenti comandi, uno alla volta, premendo Invio dopo ognuno:</p>
 		<pre><button class="copy-btn" title="Copy to Clipboard">Copia</button><code>C:</code></pre>
 		<pre><button class="copy-btn" title="Copy to Clipboard">Copia</button><code>cd Windows\System32</code></pre>
 		<pre><button class="copy-btn" title="Copy to Clipboard">Copia</button><code>del Utilman.exe</code></pre>
