--- a/index.html
+++ b/index.html
@@ -125,9 +125,13 @@
 				transition: background-color 0.3s ease, color 0.3s ease;
 			}
 			pre {
+				padding: 0;
+				border: 1px solid var(--border-color-light);
+			}
+			pre code {
+				display: block;
 				padding: 1em;
 				overflow-x: auto;
-				border: 1px solid var(--border-color-light);
 			}
 			html.dark code,
 			html.dark pre {
@@ -758,4 +762,3 @@
 		</script>
 	</body>
 </html>
-
