--- a/index.html
+++ b/index.html
@@ -414,9 +414,9 @@
 			<h2>Indice dei Contenuti</h2>
 			<ul>
 				<li><a href="#prerequisiti">1. Prerequisiti</a></li>
-				<li><a href="#part1">2. Creazione dell'Account Admin</a></li>
-				<li><a href="#part2">3. Ripristinare Utilman</a></li>
-				<li><a href="#part3">4. Disinstallare Prodotti ESET</a></li>
+				<li><a href="#parte1">2. Creazione dell'Account Admin</a></li>
+				<li><a href="#parte2">3. Ripristinare Utilman</a></li>
+				<li><a href="#parte3">4. Disinstallare Prodotti ESET</a></li>
 				<li><a href="#sicurezza">5. Note sulla Sicurezza</a></li>
 			</ul>
 		</div>
@@ -440,7 +440,7 @@
 		</ul>
 		<hr />
 
-		<h2 id="part1">2. 🛠️ Creazione dell'Account Admin</h2>
+		<h2 id="parte1">2. 🛠️ Creazione dell'Account Admin</h2>
 
 		<h3>1. Riavviare il PC in Modalità di Ripristino</h3>
 		<p>
@@ -509,7 +509,7 @@
 		</p>
 		<hr />
 
-		<h2 id="part2">3. ♻️ Ripristinare Utilman</h2>
+		<h2 id="parte2">3. ♻️ Ripristinare Utilman</h2>
 
 		<h3>1. Riavviare in Modalità di Ripristino</h3>
 		<p>Segui lo stesso procedimento di prima.</p>
@@ -528,7 +528,7 @@
 		</p>
 		<hr />
 
-		<h2 id="part3">4. 🗑️ Disinstallare Prodotti ESET</h2>
+		<h2 id="parte3">4. 🗑️ Disinstallare Prodotti ESET</h2>
 		<p>
 			Questa sezione descrive come utilizzare lo strumento ESET Uninstaller per
 			rimuovere un prodotto ESET quando i metodi di disinstallazione standard
