--- a/index.html
+++ b/index.html
@@ -632,7 +632,7 @@
 				</ul>
 			</li>
 			<li>
-				Naviga alla directory dove hai salvato <code>esetuninstaller.exe</code>.
+				Naviga alla directory dove hai salvato <code>uninstaller.exe</code>.
 				Ad esempio, se l'hai salvato sul Desktop del tuo utente:
 				<pre><button class="copy-btn" title="Copy to Clipboard">Copia</button><code>cd C:\Users\NomeUtente\Desktop</code></pre>
 				<em
@@ -642,7 +642,7 @@
 			</li>
 			<li>
 				Esegui lo strumento digitando:
-				<pre><button class="copy-btn" title="Copy to Clipboard">Copia</button><code>esetuninstaller.exe</code></pre>
+				<pre><button class="copy-btn" title="Copy to Clipboard">Copia</button><code>uninstaller.exe</code></pre>
 			</li>
 			<li>
 				Leggi attentamente le avvertenze e digita <code>y</code> per confermare.
@@ -667,7 +667,7 @@
 			</li>
 			<li>Riavvia il computer.</li>
 			<li>
-				Dopo il riavvio, elimina il file <code>esetuninstaller.exe</code> dal
+				Dopo il riavvio, elimina il file <code>uninstaller.exe</code> dal
 				Desktop (o da dove l'avevi salvato).
 			</li>
 		</ul>
@@ -762,3 +762,4 @@
 		</script>
 	</body>
 </html>
+
