style: Update sun icon color to slate-200 for dark mode.

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 				>
 					<!-- Sun Icon -->
 					<svg
-						class="icon-sun w-5 h-5 hidden dark:block text-yellow-500"
+						class="icon-sun w-5 h-5 hidden dark:block text-slate-200"
 						xmlns="http://www.w3.org/2000/svg"
 						viewBox="0 0 24 24"
 						stroke-width="1.5"
